--- a/assets/themes/the-minimum/css/style.css
+++ b/assets/themes/the-minimum/css/style.css
@@ -84,10 +84,13 @@ p,
 ul,
 ol,
 dl,
-img {
+/*img {
   margin-top: 0;
   margin-bottom: 1.625em;
-}
+}*/
+img{max-width:100%;height:auto; margin-top: 0;
+  margin-bottom: 1.625em;}
+	 
 small, .small, aside {
   font-size: 0.75em;
 }
