--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,7 +1,7 @@
 {% if page.chart or page.jquery %}{% else %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
 	
-<script>var twitterAccount="hmfaysal";</script>
+<script>var twitterAccount="proaben";</script>
 <div class="shareTooltip" id="shareTooltip">
 <div class="tooltipContainer"><a id="sendToTwitter" href="" class="sharingLink twitter"><span></span></a></div>
 </div>
@@ -15,7 +15,7 @@
     <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
     <script src="{{ site.url }}/assets/js/vendor/selectshare.js"></script>
     {% if site.nprogress %}<script src="{{ site.url }}/assets/js/vendor/nprogress.js"></script>{% endif %}
-<script type='text/javascript'>console.log("HMFaysal's Blog Version 2.0.3");</script>
+<script type='text/javascript'>console.log("Sherlock's Blog Version 2.0.3");</script>
 <script type='text/javascript'>
   $(document).ready(function() {
     $(".time").text(function (index, value) {
