--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -8,7 +8,7 @@
   clear: both; }
 
 html, body, .notepad-post-container, .notepad-post-header {
-  height: 100%; }
+  height: 100%;font-size:75% }
 
 .notepad-post-header-title {
   display: inline-block;
@@ -96,20 +96,20 @@ html, body, .notepad-post-container, .notepad-post-header {
     .post-template .notepad-post-title h1 {
       color: #000;
       font-weight: 800;
-      font-size: 2.5rem;
+      font-size: 2.1875rem;
       margin: 0 auto;
       line-height: 1.1;
       text-transform: uppercase;
       text-rendering: optimizeLegibility; }
       @media only screen and (min-width: 40.063em) {
         .post-template .notepad-post-title h1 {
-          font-size: 3.125rem; } }
+          font-size: 2.1875rem; } }
       @media only screen and (min-width: 70em) {
         .post-template .notepad-post-title h1 {
-          font-size: 4.375rem; } }
+          font-size: 3.0625rem; } }
       @media only screen and (min-width: 90em) {
         .post-template .notepad-post-title h1 {
-          font-size: 5.3125rem; } }
+          font-size: 3.7188rem; } }
     .post-template .notepad-post-title.background--light h1 {
       color: #000; }
     .post-template .notepad-post-title.background--dark h1 {
@@ -364,18 +364,19 @@ html, body, .notepad-post-container, .notepad-post-header {
     @media only screen and (min-width: 40.063em) {
       .notepad-page-title h1,
       .notepad-post-title-simple h1 {
-        font-size: 4.375rem;
+        font-size: 2.1875rem;
         padding-top: 5.625rem;
         padding-bottom: 5.625rem; } }
     @media only screen and (min-width: 70em) {
       .notepad-page-title h1,
       .notepad-post-title-simple h1 {
+      	font-size: 3.0625rem;
         padding-top: 6.875rem;
         padding-bottom: 6.875rem; } }
     @media only screen and (min-width: 90em) {
       .notepad-page-title h1,
       .notepad-post-title-simple h1 {
-        font-size: 5.3125rem;
+        font-size: 3.7188rem;
         padding-top: 8.125rem;
         padding-bottom: 8.125rem; } }
   .notepad-page-title .notepad-post-meta-simple,
