--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -99,7 +99,8 @@ html, body, .notepad-post-container, .notepad-post-header {
       font-size: 2.1875rem;
       margin: 0 auto;
       line-height: 1.1;
-      text-transform: uppercase;
+      text-align: left;
+      //text-transform: uppercase;
       text-rendering: optimizeLegibility; }
       @media only screen and (min-width: 40.063em) {
         .post-template .notepad-post-title h1 {
@@ -356,10 +357,10 @@ html, body, .notepad-post-container, .notepad-post-header {
     font-size: 3.125rem;
     padding: 0;
     padding-top: 5rem;
-    padding-bottom: 4.375rem;
+    padding4-bottom: 4.375rem;
     margin: 0 auto;
     line-height: 1.1;
-    text-align: center;
+    text-align: left;
     text-transform: uppercase; }
     @media only screen and (min-width: 40.063em) {
       .notepad-page-title h1,
