--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -6,7 +6,28 @@
 
 .cf:after {
   clear: both; }
+.gist,.gistfile{
+	max-width: 56.25rem;
+	margin-left: auto;
+  margin-right: auto;
+  
+}
+.gist-data.gist-syntax table{
+	margin-left:0;
+	max-width: 56.25rem;
+	table-layout: auto;
+	}
 
+/*,.gist-meta,.gist-data.gist-syntax,.file-data {
+	*/
+/*
+.td.line-numbers,.td.line-number,#file-gistfile1-css-L1{
+	max-width: 10.25rem;
+margin-left: auto;
+ // margin-right: auto;
+ text-align:left
+	}
+	*/
 html, body, .notepad-post-container, .notepad-post-header {
   height: 100%;font-size:75% }
 
