--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,7 @@
 {% if site.nprogress %}<link rel="stylesheet" href="{{ site.url }}/assets/css/vendor/nprogress.css">{% endif %}
 
 <!-- Modernizr -->
-<script src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
+<script async src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
 {% if page.chart or page.jquery %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
 {% if page.chart %}
