--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,13 +12,13 @@
                 <i class="fa fa-rss fa-stack-1x"></i>
             </span>
         </a>
-        {% if site.owner.twitter %}
+        <!-- {% if site.owner.twitter %}
         <a href="http://twitter.com/{{ site.owner.twitter }}" target="_blank">
             <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-twitter fa-stack-1x"></i>
             </span>
-        </a>{% endif %}
+        </a>{% endif %} -->
         {% if site.owner.google_plus %}
         <a href="http://plus.google.com/{{ site.owner.google_plus }}" target="_blank">
             <span class="fa-stack fa-lg">
