--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,25 @@
+<!-- Modernizr -->
+<script async src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
+{% if page.chart or page.jquery %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
+{% if page.chart %}
+<script type="text/javascript" src="{{ site.url }}/assets/js/vendor/amcharts.js"></script>
+{% if page.charttype == 'pie' %}<script type="text/javascript" src="http://cdn.amcharts.com/lib/3/pie.js"></script>{% endif %}
+{% if page.charttype == 'serial' %}<script type="text/javascript" src="http://cdn.amcharts.com/lib/3/serial.js"></script>{% endif %}
+{% endif %}
+{% if page.mathjax %}
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script>MathJax.Hub.Config({config:["MMLorHTML.js"],extensions:["tex2jax.js","TeX/AMSmath.js","TeX/AMSsymbols.js"],jax:["input/TeX"],tex2jax:{inlineMath:[["$","$"],["\\(","\\)"]],displayMath:[["$$","$$"],["\\[","\\]"]],processEscapes:false},TeX:{TagSide:"right",TagIndent:".8em",MultLineWidth:"85%",equationNumbers:{autoNumber:"AMS",},unicode:{fonts:"STIXGeneral,'Arial Unicode MS'"}},showProcessingMessages:false});</script>{% endif %}
+<!-- Battle For the Net 
+<script type="text/javascript">
+    var _bftn_options = {
+      animation: 'banner',
+      position: 'bottomright',
+      theme: 'dark'
+    }
+</script>
+<script src="//widget.battleforthenet.com/widget.min.js" async></script>-->
+
 {% if page.chart or page.jquery %}{% else %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
 	
