--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,21 @@
+
+<script type="text/javascript">
+function downloadJSAtOnload() {
+  var element = document.createElement("script");
+  element.src = "{{ site.url }}/assets/js/vendor/modernizr.js";
+  document.body.appendChild(element);
+}
+if (window.addEventListener)
+  window.addEventListener("load", downloadJSAtOnload, false);
+else if (window.attachEvent)
+  window.attachEvent("onload", downloadJSAtOnload);
+else
+  window.onload = downloadJSAtOnload;
+</script>
+
 <!-- Modernizr -->
-<script async src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
+<!-- <script async src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
+ -->
 {% if page.chart or page.jquery %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
 {% if page.chart %}
