--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -16,15 +16,15 @@ else
 <!-- Modernizr -->
 <!-- <script async src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
  -->
-{% if page.chart or page.jquery %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
+{% if page.chart or page.jquery %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" defer="defer"></script>
+<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js" defer="defer"><\/script>');/*]]>*/</script>{% endif %}
 {% if page.chart %}
-<script type="text/javascript" src="{{ site.url }}/assets/js/vendor/amcharts.js"></script>
-{% if page.charttype == 'pie' %}<script type="text/javascript" src="http://cdn.amcharts.com/lib/3/pie.js"></script>{% endif %}
-{% if page.charttype == 'serial' %}<script type="text/javascript" src="http://cdn.amcharts.com/lib/3/serial.js"></script>{% endif %}
+<script type="text/javascript" src="{{ site.url }}/assets/js/vendor/amcharts.js" defer="defer"></script>
+{% if page.charttype == 'pie' %}<script type="text/javascript" src="http://cdn.amcharts.com/lib/3/pie.js" defer="defer"></script>{% endif %}
+{% if page.charttype == 'serial' %}<script type="text/javascript" src="http://cdn.amcharts.com/lib/3/serial.js" defer="defer"></script>{% endif %}
 {% endif %}
 {% if page.mathjax %}
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer="defer"></script>
 <script>MathJax.Hub.Config({config:["MMLorHTML.js"],extensions:["tex2jax.js","TeX/AMSmath.js","TeX/AMSsymbols.js"],jax:["input/TeX"],tex2jax:{inlineMath:[["$","$"],["\\(","\\)"]],displayMath:[["$$","$$"],["\\[","\\]"]],processEscapes:false},TeX:{TagSide:"right",TagIndent:".8em",MultLineWidth:"85%",equationNumbers:{autoNumber:"AMS",},unicode:{fonts:"STIXGeneral,'Arial Unicode MS'"}},showProcessingMessages:false});</script>{% endif %}
 <!-- Battle For the Net 
 <script type="text/javascript">
@@ -36,8 +36,8 @@ else
 </script>
 <script src="//widget.battleforthenet.com/widget.min.js" async></script>-->
 
-{% if page.chart or page.jquery %}{% else %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
+{% if page.chart or page.jquery %}{% else %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" defer="defer"></script>
+<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js" defer="defer"><\/script>');/*]]>*/</script>{% endif %}
 	
 <script>var twitterAccount="proaben";</script>
 <div class="shareTooltip" id="shareTooltip">
@@ -45,14 +45,14 @@ else
 </div>
 <!-- <script>!function(f,a,g){var e,b=f.getElementsByTagName(a)[0],c=/^http:/.test(f.location)?"http":"https";if(!f.getElementById(g)){e=f.createElement(a);e.id=g;e.src=c+":{{ site.url }}/assets/js/vendor/twitter.js";b.parentNode.insertBefore(e,b)}}(document,"script","twitter-wjs");</script> -->
     
-    <script src="{{ site.url }}/assets/js/vendor/fastclick.js"></script>
-    <script src="{{ site.url }}/assets/js/vendor/foundation.min.js"></script>
-    {% if page.imagefeature %}<script src="{{ site.url }}/assets/js/vendor/background-check.js"></script>
-    <script src="{{ site.url }}/assets/js/vendor/post-header-animations.js"></script>{% endif %}
-    <script src="{{ site.url }}/assets/js/notepad.js"></script>
-    <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
-    <script src="{{ site.url }}/assets/js/vendor/selectshare.js"></script>
-    {% if site.nprogress %}<script src="{{ site.url }}/assets/js/vendor/nprogress.js"></script>{% endif %}
+    <script src="{{ site.url }}/assets/js/vendor/fastclick.js" defer="defer"></script>
+    <script src="{{ site.url }}/assets/js/vendor/foundation.min.js" defer="defer"></script>
+    {% if page.imagefeature %}<script src="{{ site.url }}/assets/js/vendor/background-check.js" defer="defer"></script>
+    <script src="{{ site.url }}/assets/js/vendor/post-header-animations.js" defer="defer"></script>{% endif %}
+    <script src="{{ site.url }}/assets/js/notepad.js" defer="defer"></script>
+    <script src="{{ site.url }}/assets/js/scripts.min.js" defer="defer"></script>
+    <script src="{{ site.url }}/assets/js/vendor/selectshare.js" defer="defer"></script>
+    {% if site.nprogress %}<script src="{{ site.url }}/assets/js/vendor/nprogress.js" defer="defer"></script>{% endif %}
 <script type='text/javascript'>console.log("Sherlock's Blog Version 2.0.3");</script>
 <script type='text/javascript'>
   $(document).ready(function() {
