--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -16,8 +16,8 @@ else
 <!-- Modernizr -->
 <!-- <script async src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
  -->
-{% if page.chart or page.jquery %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" defer="defer"></script>
-<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js" defer="defer"><\/script>');/*]]>*/</script>{% endif %}
+{% if page.chart or page.jquery %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
 {% if page.chart %}
 <script type="text/javascript" src="{{ site.url }}/assets/js/vendor/amcharts.js" defer="defer"></script>
 {% if page.charttype == 'pie' %}<script type="text/javascript" src="http://cdn.amcharts.com/lib/3/pie.js" defer="defer"></script>{% endif %}
@@ -36,8 +36,8 @@ else
 </script>
 <script src="//widget.battleforthenet.com/widget.min.js" async></script>-->
 
-{% if page.chart or page.jquery %}{% else %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" defer="defer"></script>
-<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js" defer="defer"><\/script>');/*]]>*/</script>{% endif %}
+{% if page.chart or page.jquery %}{% else %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
 	
 <script>var twitterAccount="proaben";</script>
 <div class="shareTooltip" id="shareTooltip">
@@ -52,7 +52,7 @@ else
     <script src="{{ site.url }}/assets/js/notepad.js" defer="defer"></script>
     <script src="{{ site.url }}/assets/js/scripts.min.js" defer="defer"></script>
     <script src="{{ site.url }}/assets/js/vendor/selectshare.js" defer="defer"></script>
-    {% if site.nprogress %}<script src="{{ site.url }}/assets/js/vendor/nprogress.js" defer="defer"></script>{% endif %}
+    {% if site.nprogress %}<script src="{{ site.url }}/assets/js/vendor/nprogress.js"></script>{% endif %}
 <script type='text/javascript'>console.log("Sherlock's Blog Version 2.0.3");</script>
 <script type='text/javascript'>
   $(document).ready(function() {
