--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -16,8 +16,8 @@ else
 <!-- Modernizr -->
 <!-- <script async src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
  -->
-{% if page.chart or page.jquery %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" defer="defer"></script>
-<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js" defer="defer"><\/script>');/*]]>*/</script>{% endif %}
+{% if page.chart or page.jquery %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
 {% if page.chart %}
 <script type="text/javascript" src="{{ site.url }}/assets/js/vendor/amcharts.js" defer="defer"></script>
 {% if page.charttype == 'pie' %}<script type="text/javascript" src="http://cdn.amcharts.com/lib/3/pie.js" defer="defer"></script>{% endif %}
@@ -36,8 +36,8 @@ else
 </script>
 <script src="//widget.battleforthenet.com/widget.min.js" async></script>-->
 
-{% if page.chart or page.jquery %}{% else %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" defer="defer"></script>
-<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js" defer="defer"><\/script>');/*]]>*/</script>{% endif %}
+{% if page.chart or page.jquery %}{% else %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script>/*<![CDATA[*/window.jQuery||document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.11.1.min.js"><\/script>');/*]]>*/</script>{% endif %}
 	
 <script>var twitterAccount="proaben";</script>
 <div class="shareTooltip" id="shareTooltip">
@@ -52,8 +52,8 @@ else
     <script src="{{ site.url }}/assets/js/notepad.js" defer="defer"></script>
     <script src="{{ site.url }}/assets/js/scripts.min.js" defer="defer"></script>
     <script src="{{ site.url }}/assets/js/vendor/selectshare.js" defer="defer"></script>
-    {% if site.nprogress %}<script src="{{ site.url }}/assets/js/vendor/nprogress.js" defer="defer"></script>{% endif %}
-<!-- <script type='text/javascript'>console.log("Sherlock's Blog Version 2.0.3");</script>
+    {% if site.nprogress %}<script src="{{ site.url }}/assets/js/vendor/nprogress.js"></script>{% endif %}
+<script type='text/javascript'>console.log("Sherlock's Blog Version 2.0.3");</script>
 <script type='text/javascript'>
   $(document).ready(function() {
     $(".time").text(function (index, value) {
@@ -68,4 +68,4 @@ else
 {% if site.google_analytics %}
 <script>(function(d,e,j,h,f,c,b){d.GoogleAnalyticsObject=f;d[f]=d[f]||function(){(d[f].q=d[f].q||[]).push(arguments)},d[f].l=1*new Date();c=e.createElement(j),b=e.getElementsByTagName(j)[0];c.async=1;c.src=h;b.parentNode.insertBefore(c,b)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create","{{ site.google_analytics }}","auto");ga("require","displayfeatures");ga("send","pageview");</script>
 {% endif %}
-{% if site.nprogress %}<script>NProgress.start();var interval=setInterval(function(){NProgress.inc()},1000);jQuery(window).load(function(){clearInterval(interval);NProgress.done()});jQuery(window).unload(function(){NProgress.start()});</script>{% endif %} -->
+{% if site.nprogress %}<script>NProgress.start();var interval=setInterval(function(){NProgress.inc()},1000);jQuery(window).load(function(){clearInterval(interval);NProgress.done()});jQuery(window).unload(function(){NProgress.start()});</script>{% endif %}
