--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,18 +1,34 @@
-    <div class="notepad-share-icons social-icons text-center">
-        <div class="row">
-            <section class="notepad-post-share">
-                <a class="twitter-icon" href="https://twitter.com/intent/tweet?text=&quot;{{ page.title }}&quot;%20{{ site.url }}{{ page.url }}%20via%20&#64;{{ site.owner.twitter }}" title="Share on Twitter">
-                    <i class="fa fa-twitter"></i>
-                </a>
-                <a class="facebook-icon" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}"
-                    onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;" title="Share on Facebook">
-                    <i class="fa fa-facebook"></i>
-                </a>
-                <a class="google-icon" href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}"
-                   onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;" title="Share on Google+">
-                    <i class="fa fa-google-plus"></i>
-                </a>
-            </section>
-        </div>
-    </div>
-<div class="cf"></div>
+<div class="share">
+    <p>
+        Share
+    </p>
+    <ul>
+        <li class="ml-1 mr-1">
+        <a target="_blank" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ page.url | absolute_url }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+        <i class="fab fa-twitter"></i>
+        </a>
+        </li>
+        
+        <li class="ml-1 mr-1">
+        <a target="_blank" href="https://facebook.com/sharer.php?u={{ page.url | absolute_url }}" onclick="window.open(this.href, 'facebook-share', 'width=550,height=435');return false;">
+        <i class="fab fa-facebook-f"></i>
+        </a>
+        </li>
+        
+        <li class="ml-1 mr-1">
+        <a target="_blank" href="https://plus.google.com/share?url={{ page.url | absolute_url }}" onclick="window.open(this.href, 'facebook-google', 'width=550,height=435');return false;">
+        <i class="fab fa-google"></i>
+        </a>
+        </li>
+        
+    </ul>
+    {% if page.comments != false %}
+    <div class="sep">
+    </div>				
+    <ul>
+        <li> 
+        <a  class="small smoothscroll" href="#disqus_thread"></a>
+        </li>
+    </ul>
+    {% endif %}
+</div>
