--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@ post_class: post-template
 			<!-- Post Categories -->
 			<div class="after-post-tags">
 				<ul class="tags">
-                    {% assign sortedCategories = page.tags | sort %}
+                    {% assign sortedCategories = page.categories | sort %}
                     {% for category in sortedCategories %}
                     <li>
                      <a href="{{ site.baseurl }}/category/{{ category | slugify }}/">{{ category }}</a>
